# armillary

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/projects/-Users-justi-Projects-armillary/memory/: feedback_no_backward_compat.md
.github/workflows/: test.yml
docs/: feature-tree.yaml
src/armillary/: __init__.py  bootstrap.py  cache.py  cli.py  cli_config.py  cli_config_ceremony.py  cli_helpers.py  cli_khoj.py  cli_tools.py  config.py  context_service.py  exclude_service.py  exporter.py  heatmap_service.py  khoj_service.py  launcher.py  mcp_server.py  metadata.py  models.py  next_service.py  pulse_service.py  purpose_service.py  scan_service.py  scanner.py  search.py  share_service.py  status.py  status_override.py  transition_service.py  utils.py
src/armillary/ui/: __init__.py  actions.py  app.py  detail.py  helpers.py  launcher_support.py  overview.py  search.py  settings.py  settings_editors.py  settings_services.py  settings_tabs.py  sidebar.py
tests/: test_bootstrap.py  test_cache.py  test_cli.py  test_config.py  test_context_service.py  test_exporter.py  test_launcher.py  test_mcp_server.py  test_metadata.py  test_next_service.py  test_overview_logic.py  test_pulse_service.py  test_scanner.py  test_search.py  test_share_service.py  test_status.py  test_status_override.py  test_transition_service.py  test_ui_launchers.py  test_utils.py  test_v2_features.py
