[project]
name = "armillary"
version = "0.1.0"
description = "Project observatory with AI integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "armillary contributors" }]
keywords = [
    "cli",
    "dashboard",
    "developer-tools",
    "multi-repo",
    "workspace",
    "ai-tools",
    "semantic-search",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "streamlit>=1.30.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
armillary = "armillary.cli:app"

[project.urls]
Homepage = "https://github.com/justi/armillary"
Repository = "https://github.com/justi/armillary"
Issues = "https://github.com/justi/armillary/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armillary"]
