[project]
name = "armillary"
version = "0.1.0"
description = "Project observatory with AI integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "armillary contributors" }]
keywords = [
    "cli",
    "dashboard",
    "developer-tools",
    "multi-repo",
    "workspace",
    "ai-tools",
    "semantic-search",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    # 1.35.0 introduced `on_select` / `selection_mode` on `st.dataframe`,
    # which the M4 dashboard depends on for row-click navigation.
    "streamlit>=1.35.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
armillary = "armillary.cli:app"

[project.urls]
Homepage = "https://github.com/justi/armillary"
Repository = "https://github.com/justi/armillary"
Issues = "https://github.com/justi/armillary/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armillary"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# Test files use longer assertion lines and may import fixtures that
# look unused to a static checker.
"tests/**" = ["E501"]
# typer's idiomatic API requires `Option(...)` / `Argument(...)` calls in
# function defaults. Migrating to `Annotated[T, Option(...)]` is a separate
# refactor; suppress B008 for now in the CLI module only.
"src/armillary/cli.py" = ["B008"]
"src/armillary/cli_config.py" = ["B008"]
"src/armillary/cli_khoj.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
